<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppDianpingHair</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="distance">距离最近</string>
	<string name="comment_all">总体评价</string>
	<string name="price_from_l">费用从低到高</string>
	<string name="price_from_h">费用从高到低</string>
	<string name="buy_right_now">立即购买</string>
	<string name="detail">详细</string>
	<string name="coupon_and_deal">优惠券/团购</string>
	<string name="comment">评论</string>
	<string name="other">其他</string>
	<string name="business_infor">商家信息</string>
	<string name="single_price">单价:</string>
	<string name="count">数量:</string>
	<string name="total_price">总价:</string>
	<string name="support_any_refund">支持随时付款</string>
	<string name="support_expires_refund">支持过期付款</string>
	<string name="pay_right_now">立即支付</string>
</resources>
