<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:orientation="vertical" >
        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_price"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="39.9元"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </RelativeLayout>
         <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </RelativeLayout>
        
         <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_price"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="39.90元"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </RelativeLayout>
         
         <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:id="@+id/act_pay_support_any_refund"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support_any_refund"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="26dp"
                android:layout_toRightOf="@+id/act_pay_support_any_refund"
                android:text="@string/support_expires_refund"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
        </RelativeLayout>
         
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="联络手机号码"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="110110"
            android:textAppearance="?android:attr/textAppearanceMedium" />
         
    </LinearLayout>

    <Button
        android:id="@+id/act_pay_pay_right_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="#ffffff"
        android:background="@drawable/selector_btn_green"
        android:text="@string/pay_right_now" />

</RelativeLayout>